--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         
       </header>
   
-      <img src="Profielfoto.jpg" alt="" width="800" height="800">
+      <img src="Squad1H-Rick.JPG" alt="" width="800" height="800">
 
       <dl>
         <dt>HTML</dt>
