Kleine aanpassingen even mijn breakdownschets toegevoegd.

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ut<!DOCTYPE html>
 <html lang="nl">
   <head>
     <meta charset="UTF-8">
@@ -15,7 +15,7 @@
   <body>
     <div class="content">
 <div class="card">
-  <img src="Squad1H-Rick-modified.png" width="100" height="100">
+  <img src="Squad1H-Rick-modified.png" alt="Rick Pijnacker" width="100" height="100"></img>
   
   <div class="name">
   <h2>Rick Pijnacker</h2>
@@ -31,7 +31,7 @@
        <span class="label">Leeftijd</span>
     </div>
     <div class="item">
-       <span class="value">Anna Paulowna </span>
+       <span class="value">Anna Paulowna</span>
        <span class="label">Woonplaats</span>
     </div>
     <div class="item">
