--- a/index.html
+++ b/index.html
@@ -3,50 +3,81 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FDND Visitekaartje</title>
+    <title>I Love Web</title>
     <link rel="stylesheet" href="styles/style.css">
     <script type="module" src="script.js"></script>
   </head>
-  
 
+<body>
+  <p><strong>11-09-2024</strong>
+    Ik heb geleerd hoe je een website voor meerdere devices werkend kan maken. Deze ga ik nog toepassen aan mijn squadpage. Ik ben ook begonnen met coderen en heb een grote schets gemaakt voor onze squadpage.
+    Studievragen:
+    Hoe pas ik javascript toe aan mijn squadpage?    
+  </p>
+  <p><strong>16-09-2024</strong>
+    Wat heb ik vandaag gedaan?
+    Ik heb vandaag schetsen gemaakt in figma. Ik heb visuele hierarchie toegepast en geleerd.    
+  </p>
+  <p><strong>17-09-2024</strong>
+    Vandaag heb ik transitions en transforms toegepast in de vorm van oefeningen. In de ochtend heb ik hier les over gekregen van Sanne. Ik kan nu images laten draaien of laten verdwijnen of omhoog of omlaag laten gaan etc. 
+  </p>
+  <p><strong>18-09-2024</strong>
+    Ik heb meer responsive design geleerd en aan onze squadpage gewerkt.  img { object-fit: contain; width: 100%; } met deze command kunnen mijn images mee bewegen met de pagina scale.
+  </p>
+  <p><strong>23-09-2024</strong>
+    Ik heb uitleg gekregen van de klant voor een website. en een debriefing gemaakt waarin ik vragen heb beantwoord over de opdracht.
+    Ik heb geleerd wat een briefing en debriefing is. Ik heb geleerd hoe je het aanpakt met de klant om een website te bouwen.
+    Ik wil leren hoe ik websites meer responsive maak met mediaqueries.
+  </p>
+  <p><strong>25-09-2024</strong>
+    Ik heb geleerd een wireframe en wireflow te maken. Beter leren schetsen met onder andere buttons schetsen.
+  </p>
+  <p><strong>30-09-2024</strong>
+    Css layout geleerd. 6 verschillende: flow grid float flex positioned multi-column. En daarmee opdrachten gedaan. 
+    Ik wil nog meer leren over de 5 naast grid. Grid beheers ik nu.
+  </p>
+  <p><strong>09-10-2024</strong>
+    Ik heb geleerd hoe ik mijn readme maak. En hoe ik een afbeelding netjes met absolute position kan neerzetten. Wat wil ik nog leren?: Hoe ik nog beter een website maak.
+  </p>
+  <p><strong>11-10-2024</strong>
+    Ik heb geleerd hoe ik met visual thinking mijn progressie kan bijhouden van wat ik die sprint heb gedaan.
+  </p>
+  <p><strong>14-10-2024</strong>
+    Workshop over Wcag Audit waarmee je met een lighthouse test kan testen of een website gebruiksvriendelijk is voor mensen met een handicap of dergelijk.
+    Ook heb ik handmatige testen gedaan op een website van kleine sluis voetbalvereniging. 
+  </p>
+  <p><strong>15-10-2024</strong>
+    Geleerd over positionering in CSS er zijn er 5 die je kan gebruiken zoals: absolute relative static en nog 2. 
+    Ook over JS geleerd waar ik onder andere heb geleerd hoe ik met een button een hamburger menu kan maken.
+  </p>
+  <p><strong>16-10-2024</strong>
+    Ik heb geleerd dat HTML-elementen zoals links, afbeeldingen, labels en headings niet alleen inhoud bieden, maar ook cruciaal zijn voor een goede gebruikerservaring (UX) en toegankelijkheid. Door de juiste HTML te gebruiken, zoals het koppelen van labels aan invoervelden en het toevoegen van alt-teksten aan afbeeldingen, 
+    maak je je website toegankelijk voor een breder publiek. Bovendien heb ik ontdekt hoe browsers standaardfunctionaliteiten bieden en hoe je deze kunt verbeteren met elementen zoals "details" voor accordeons. Het belang van correcte HTML voor toegankelijkheid en gebruiksgemak is duidelijk geworden.
+  </p>
+  <p><strong>17-10-2024</strong>
+    Aan mijn website gewerkt. weinig nieuwe dingen geleerd.
+  </p>
+  <p><strong>18-10-2024</strong>
+  Vandaag hebben we code en design review gegeven en gekregen. 
+  Lighthouse test: via devtools en dan lighthouse.
+  keyboard test: met tab over de website kijken of de volgorde goed is. 
+  text-size naar 200%: instellingen - weergave - text grootte 200%.
+  avoid auto-focus: Niet auto-focus uitzetten. voor blinde mensen en met disabilities.
+  algemene woordenschat gebruiken op de website: Woordenschat dat voor iedereen te gebruiken is.
+  </p>
+  <p><strong>21-10-2024</strong>
+    Ik heb geleerd over kleur en contrast. Hoe je tekst in fotos beter kan laten uit zien. Hoe je effective contrast doet met welke kleuren je erin moet zetten. 
 
-<header></header>
-  
-  <body>
-    <div class="content">
-<div class="card">
-  <img src="Squad1H-Rick-modified.png" alt="Rick Pijnacker" width="100" height="100"></img>
-  
-  <div class="name">
-  <h2>Rick Pijnacker</h2>
-</div>
-
-  <p>
-    Ik ben een creative, rekenkundige, en oplossingsgerichte frontend developer met een passie voor voetbal en darten.
+    links bronnen en bijvoorbeeld issues van de contrast test toe. 
+  </p>
+  <p><strong>23-10-2024</strong>
+  Ik heb vandaag geleerd hoe gehandicapte mensen over het internet surfen zonder muis met alleen hun toetsenbord.
+  Ik heb readme gemaakt met duidelijkere uitleg en meer voorbeelden.
+  Betere code.
   </p>
 
-  <div class="card-about">
-    <div class="item">
-       <span class="value">22</span>
-       <span class="label">Leeftijd</span>
-    </div>
-    <div class="item">
-       <span class="value">Anna Paulowna</span>
-       <span class="label">Woonplaats</span>
-    </div>
-    <div class="item">
-       <span class="value">Frontend Developer</span>
-       <span class="label">Beroep</span>
-    </div>
- </div>
-
- <button type="button">Meer info</button>
 
 
-
-</div>
-</div>
-<svg viewBox="0 0 208 278"></svg>
 
 </body>
   
